# service/tenant/docs/swagger.json
@@ -53,7 +53,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/form.TenantCallbackResp"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/form.TenantCallbackResp"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -116,19 +128,19 @@
                         "Bearer": []
                     }
                 ],
-                "description": "获取access_token",
+                "description": "获取accessToken",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
                     "tenant"
                 ],
-                "summary": "获取access_token",
+                "summary": "获取accessToken",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "refresh_token",
-                        "name": "refresh_token",
+                        "description": "refreshToken",
+                        "name": "refreshToken",
                         "in": "query"
                     }
                 ],
@@ -136,7 +148,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/form.TenantCallbackResp"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/form.TenantCallbackResp"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
